# tap-protocol

./: .gitignore  README.md  pyproject.toml
docs/plans/: worktree-isolation-impl.md
tap/: __init__.py  __main__.py  agent_channel.py  agent_manager.py  cli.py  client.py  compat.py  constants.py  daemon.py  protocol.py  storage.py  worktree.py
tap/adapters/: __init__.py  base.py  claude.py  generic.py  goose.py  mock.py
tap/sandboxes/: __init__.py  base.py  docker.py  none.py  podman.py
tap/tests/: test_adapters.py  test_agent_manager.py  test_daemon.py  test_integration.py  test_persistent.py  test_sandboxes.py  test_storage.py  test_worktree.py
